--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM debian
 RUN  apt-get -y update && apt-get -y install nginx
-COPY default /etc/nginx/sites-available/default
+COPY /conf/my.conf /etc/nginx/conf.d
 EXPOSE 443/tcp
 CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
