--- a/srcs/requirements/nginx/conf/my.conf
+++ b/srcs/requirements/nginx/conf/my.conf
@@ -1,35 +1,11 @@
-# server {
-#     listen 443 default_server;
-#     listen [::]:443 default_server;
-    
-#     root /usr/share/nginx/html;
-#     index index.html index.htm;
+server {
+    listen      443 ssl;
+    server_name  bcarreir.42.fr www.bcarreir42.fr;
+    root    /var/www/;
+    index index.php index.html;
 
-#     server_name _;
-#     location / {
-#         try_files $uri $uri/ =404;
-#     }
-# }
 
-http {
-    server {
-        location / {
-            fastcgi_pass    localhost:9000;
-            fastcgi_param   SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param   QUERY_STRING    $query_string;
-        }
-
-        location ~\.(gif|jpg|png)$ {
-            root /var/images;
-        }
-    }
-
-    server {
-        listen 443;
-        root /var/up1;
-
-        location / {
-
-        }
-    }
+    ssl_certificate /etc/nginx/certificates/cert.pem;
+    ssl_certificate_key /etc/nginx/certificates/key.pem
+    ssl_protocols TLSv1.2 TLSv1.3;
 }
