--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,7 +5,7 @@ server {
     index index.php index.html;
 
 
-    ssl_certificate /etc/nginx/certificates/cert.pem;
-    ssl_certificate_key /etc/nginx/certificates/key.pem
+    ssl_certificate /etc/ssl/certs/cert.pem;
+    ssl_certificate_key /etc/ssl/private/key.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
 }
