ssl certs done I think

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,9 +1,10 @@
 FROM debian:11
 
 RUN apt-get update && apt-get install -y nginx
+RUN mkdir -p /etc/nginx/ssl
 
 COPY ./conf/nginx.conf /etc/nginx/conf.d/default.conf
-COPY ./tools /etc/nginx/certificates
+COPY ./tools/* /etc/nginx/ssl
 
 RUN mkdir -p /run/nginx
 
